tests/analyzer/errors/fallback.ray
fn nonFailable() -> int {
    return 5
}

fn main() {
    print nonFailable() !! 85
    print nonFailable() ?? 85
}
